--- a/ui/modules/apps/BeamNG-MP/app.html
+++ b/ui/modules/apps/BeamNG-MP/app.html
@@ -113,28 +113,23 @@
     <tr>
       <td colspan="2">
         Join Session:
-        <input flex type="number" value="3359" placeholder="3359" min="3359" max="4000" step="1" value="{{quantity}}" ng-model="ctrl.port" ng-change="ctrl.setPort()">
-        <input flex type="text" placeholder="192.168.0.1" value="192.168.0.1" ng-model="ctrl.ip" ng-change="ctrl.setIP()">
+        <input flex type="number" value="3359" placeholder="3359" min="3359" max="4000" step="1" value="{{port}}" ng-model="ctrl.joinOptions.port" ng-change="ctrl.setPort()">
+        <input flex type="text" placeholder="192.168.0.1" value="{{ip}}" ng-model="ctrl.joinOptions.ip" ng-change="ctrl.setIP()">
         <span class="flat-button b-important" ng-click="ctrl.joinSession()">Join</span>
       </td>
     </tr>
     <tr>
-      <td class="column-wide-2">
+      <td colspan="2">
         Host Session:
-        <input flex type="number" value="3359" placeholder="3359"  min="3359" max="4000" step="1" value="{{quantity}}" ng-model="ctrl.port" ng-change="ctrl.setPort()">
-        <input flex type="text" disabled placeholder="0.0.0.0" value="0.0.0.0" ng-model="ctrl.ip" ng-change="ctrl.setIP()">
+        <!--<input flex type="number" value="3359" placeholder="3359"  min="3359" max="4000" step="1" value="{{quantity}}" ng-model="ctrl.port" ng-change="ctrl.setPort()">-->
         <span class="flat-button b-important" ng-click="ctrl.hostSession()">Host</span>
-      </td>
-      <td class="column-wide-2">
-
       </td>
     </tr>
     <tr>
-      <td class="column-wide-2">
-
-      </td>
-      <td class="column-wide-2">
-
+      <td colspan="2">
+        Chat:
+        <input flex type="text" placeholder="Enter Message" ng-model="ctrl.ChatMessage" value="{{ChatMessage}}" ng-change="ctrl.setChatMessage()">
+        <span class="flat-button b-important" ng-click="ctrl.chatSend()">Send</span>
       </td>
     </tr>
     <tr>
