--- a/ui/modules/apps/BeamNG-MP-DEBUG/app.html
+++ b/ui/modules/apps/BeamNG-MP-DEBUG/app.html
@@ -136,7 +136,7 @@
     </tr>
     <tr>
       <td>
-        Player ID
+        Update Time
       </td>
       <td>
         <span id="PID"></span>
@@ -144,7 +144,7 @@
     </tr>
     <tr>
       <td>
-        Vehicle ID
+        Run Time
       </td>
       <td>
         <span id="VID"></span>
