--- a/ui/modules/apps/BeamNG-MP-Session/app.html
+++ b/ui/modules/apps/BeamNG-MP-Session/app.html
@@ -1,153 +1,57 @@
-<div class="bngApp multiplayersession" ng-style="{'width': mainStyle.appWidth, 'height': mainStyle.appHeight}" ng-init="init()">
+<div ng-controller="MP" id="MP" class="bngApp multiplayersession"
+            ng-style="{'width': '100%'', 'height': '100%''}">
+
   <style>
-    table {
-      width: 100%;
-    }
-    th {
-      text-align: left;
-      font-weight: normal;
-    }
-    td {
-      vertical-align: middle;
-    }
     input[type=number] {
       width: 58px;
     }
-    .BeamNGMP {
-      height: 100%;
-    }
     .title {
-      font-size: 1em;
-      font-weight: bold;
-      color: #BBBBBB;
-      letter-spacing: 1px;
-      text-transform: uppercase;
-    }
-    .over-div {
-      position: absolute;
-      top: 20px;
-      left: 50%;
-      width: 50%;
-      height: auto;
-      font-size: 0.8em;
-      color: #000000;
-      visibility: hidden;
-    }
-    .over-div table {
-      display: inline-block;
-      position: relative;
-      left: -50%;
-      width: 240px;
-      background-color: #FFFFFF;
-    }
-    .over-div td {
-      display: inline-block;
-      margin: 0px;
-      padding: 0px;
-      border: 0px;
-      width: 50%;
-      float: left;
-      background-color: #FFFFFF;
-    }
-    .over-div td:hover {
-      background-color: #C8C8C8;
+        font-size: 1em;
+        font-weight: bold;
+        color: #BBBBBB;
+        letter-spacing: 1px;
+        text-transform: uppercase;
     }
     .flat-button {
-      display: inline-block;
-      padding: 0px 8px;
-      line-height: 1.5em;
-      text-align: center;
-      color: #000000;
-      background-color: #DADADA;
-      border: 1px solid #888888;
-      min-width: 37px;
+        display: inline-block;
+        padding: 0px 8px;
+        line-height: 1.5em;
+        text-align: center;
+        color: #000000;
+        background-color: #DADADA;
+        border: 1px solid #888888;
+        min-width: 37px;
     }
     .flat-button:hover {
-      background-color: #C8C8C8;
+        background-color: #C8C8C8;
     }
     .flat-button:active {
-      background-color: #A8A8A8;
+        background-color: #A8A8A8;
     }
-    .b-important {
-      font-weight: bold;
-    }
-    .b-important:hover {
-      background-color: #C8FFC8;
-    }
-    .b-important:active {
-      background-color: #A8FFA8;
-    }
-    .b-hide {
-      position: absolute;
-      padding: 0px;
-      top: 4px;
-      right: 4px;
-      width: 16px;
-      height: 16px;
-      font-size: 0.7em;
-    }
-    .b-check {
-      padding: 0px;
-      width: 20px;
-      height: 20px;
-      line-height: 1em;
-    }
-    .select {
-      display: inline-block;
-      margin: 0px;
-      width: 120px;
-      height: auto;
-      background-color: white;
-    }
-    .option {
-      width: 120px;
-      height: 20px;
-    }
-    .column-wide-2 {
-      width: 49%;
-    }
-    .error{
-      border-color: red;
+    .chatbox {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
     }
     ul#CHAT {
-      list-style: none;
-      padding-left: 0px;
-      max-height: 185px;
-      overflow-y: scroll;
-      max-width: 50%;
-      overflow-wrap: break-word;
+        list-style: none;
+        padding-left: 0px;
+        height: 200px;
+        overflow-y: scroll;
+        overflow-wrap: break-word;
     }
   </style>
-  <table ng-style="{'visibility': mainStyle.appShow}">
-    <tr>
-      <th colspan="4"><span class="title">Multiplayer Session</span></th>
-    </tr>
-    <tr>
-      <td colspan="1" style="width: 50% !important;">
-        Session Members:
-        <ul id="MEMBERS">
 
-        </ul>
-      </td>
-      <td colspan="2" style="width: 50% !important;">
-        Session Chat
-        <ul id="CHAT">
+  <div>
+    <p class="title">Multiplayer Session</p>
+    <p id="players" style="margin: 0;">Session Members: </p>
+    <hr style="margin-top: 5;">
+    <ul id="CHAT"></ul>
+  </div>
 
-        </ul>
-      </td>
-    </tr>
-    <tr style="bottom: 0; position: absolute;">
-      <td colspan="3">
-        Chat:
-        <input id="CHATMESSAGE" flex style="width: 455px;" type="text" placeholder="Enter Message" ng-model="ChatMessage" value="{{ChatMessage}}" ng-mouseenter="enterMouse()" ng-change="setChatMessage()">
-        <span class="flat-button b-important" ng-click="chatSend()">Send</span>
-      </td>
-    </tr>
-  </table>
-  <script type="text/javascript">
-    function updateScroll(){
-      var element = document.getElementById("CHAT");
-      element.scrollTop = element.scrollHeight;
-    }
-  </script>
+  <form class="chatbox">
+    <input id="CHATMESSAGE" style="width: 455px;" type="text" ng-click="select()">
+    <span class="flat-button b-important" ng-click="chatSend()">Send</span>
+  </form>
 </div>
