Pretty UI! Yay!

--- a/ui/modules/apps/BeamNG-MP-Session/app.html
+++ b/ui/modules/apps/BeamNG-MP-Session/app.html
@@ -14,7 +14,7 @@
     }
     .flat-button {
         display: inline-block;
-        padding: 0px 8px;
+        padding: 0 8px;
         line-height: 1.5em;
         text-align: center;
         color: #000000;
