moving to Rust server! + bug fix in js

--- a/ui/modules/apps/BeamNG-MP/app.html
+++ b/ui/modules/apps/BeamNG-MP/app.html
@@ -97,7 +97,7 @@
   </div>
   <div style="margin: 5px;">
     <p id="players" style="margin: 0;">Session Members: </p>
-    <hr style="margin-top: 5;">
+    <hr style="margin-top: 5px;">
     <ul id="CHAT"></ul>
   </div>
 
