--- a/ui/modules/apps/BeamNG-MP/app.html
+++ b/ui/modules/apps/BeamNG-MP/app.html
@@ -21,8 +21,6 @@
       padding: 2px 8px;
       margin-top: 5px;
       margin-bottom: 5px;
-      margin-left: 5px;
-      margin-right: 5px;
       line-height: 1.5em;
       text-align: center;
       color: #000000;
@@ -74,35 +72,41 @@
         margin-bottom: 5px;
     }
   </style>
-  <div style="margin-left: 5px;">
-    <p class="title">Multiplayer</p>
+  
+  <div style="display:flex;">
+	  <div style="margin-left:5px; margin-right resize:both; width:100%; min-height:100%;">
+		  <div ng-if="warnVis" id="error-log" style="margin: 5px;">
+			<p class="error">Nickname should be longer than 3 chars and cannot contain backslashes, quotes or plus signs!</p>
+		  </div>
+		  <form id="form">
+			<div style="width:100%; display:flex; align-items: center; justify-content: center;">
+				<input style="width:70px; margin-right:4px; min-width:50px; height:22px;" class="nomargin-input" placeholder="Server IP" name="IP" value="localhost" type="text" ng-click="select()">
+				<input style="width:60px; margin-right:4px; min-width:50px; height:22px;" class="nomargin-input" placeholder="Server Port" name="PORT" value="4444"  type="text"  ng-click="select()">
+				<input style="width:130px;; margin-right:4px; min-width:50px; height:22px;" class="nomargin-input" placeholder="Your nickname" name="NICKNAME" id="NICKNAME"  type="text"  ng-click="select()">
+				<button style="width:65px;" class="flat-button b-important" ng-click="connect()">Join</button>
+				<button style="width:65px; margin-right:5px;" class="flat-button b-important" ng-click="disconnect()">Leave</button>
+			</div>
+		  </form>
+		  <div>
+			<span>Ping: </span>
+			<span id="PING" class="empty-span"></span>
+			<span>Status: </span>
+			<span id="STATUS" class="empty-span"></span>
+		  </div>
+		  <div>
+			<hr style="margin-bottom: -13px;">
+			<ul style="height:110px;" id="CHAT"></ul>
+		  </div>
+		  <form class="chatbox">
+			<input id="CHATMESSAGE" style="width:100%; height:24px;" type="text" ng-click="select()" placeholder="Chat Message.">
+			<button style="height:30px;" ng-click="chatSend()">send</button>
+		  </form>
+	  </div>
+	  <div style="width:100%; resize:both;">
+		<table id="playerstable" border="1" style="border-collapse: collapse; width:100%;">
+		  <tr><th>Players</th></tr>
+		</table>
+	  </div>
   </div>
-  <div ng-if="warnVis" id="error-log" style="margin: 5px;">
-    <p class="error">Nickname should be longer than 3 chars and cannot contain backslashes, quotes or plus signs!</p>
-  </div>
-  <form id="form" style="margin: 5px 5px 0px 5px;">
-    <p style="margin-top: 3px; margin-bottom: 2px;">Server Information:</p>
-    <input class="nomargin-input" name="IP" type="text" placeholder="Server IP address" ng-click="select()">
-    <span class="nobotmargin"> : </span>
-    <input class="nomargin-input" style="width: 50px;" name="PORT" type="text" placeholder="Port" ng-click="select()">
-    <input id="NICKNAME" name="NICKNAME" class="nomargin-input" style="margin-left: 5px;" type="text" placeholder="Your nickname" ng-click="select()">
-    <button class="flat-button b-important" ng-click="connect()">Join</button>
-    <button class="flat-button b-important" ng-click="disconnect()">Leave</button>
-  </form>
-  <div style="margin: 5px;">
-    <span>Ping: </span>
-    <span id="PING" class="empty-span"></span>
-    <span>Status: </span>
-    <span id="STATUS" class="empty-span"></span>
-  </div>
-  <div style="margin: 5px;">
-    <p id="players" style="margin: 0;">Session Members: </p>
-    <hr style="margin-top: 5px;">
-    <ul id="CHAT"></ul>
-  </div>
-
-  <form class="chatbox">
-    <input id="CHATMESSAGE" style="width: 100%;margin: 5px;" type="text" ng-click="select()" placeholder="Chat Message.">
-    <span class="flat-button b-important" ng-click="chatSend()">Send</span>
-  </form>
+  
 </div>
