Updated the github from the discord(20/02/21) version and added player joined/left messages, timestamps, and a chat clear button to the ingame UI

--- a/ui/modules/apps/BeamNG-MP/app.html
+++ b/ui/modules/apps/BeamNG-MP/app.html
@@ -92,6 +92,7 @@
 			<span id="PING" class="empty-span"></span>
 			<span>Status: </span>
 			<span id="STATUS" class="empty-span"></span>
+			<button style="height:30px; float:right;" ng-click="chatClear()">Clear Chat</button>
 		  </div>
 		  <div>
 			<hr style="margin-bottom: -13px;">
@@ -99,7 +100,7 @@
 		  </div>
 		  <form class="chatbox">
 			<input id="CHATMESSAGE" style="width:100%; height:24px;" type="text" ng-click="select()" placeholder="Chat Message.">
-			<button style="height:30px;" ng-click="chatSend()">send</button>
+			<button style="height:30px;" ng-click="chatSend()">Send</button>
 		  </form>
 	  </div>
 	  <div style="width:100%; resize:both;">
