Lots of work, Can now load into the game

--- a/ui/modules/mainmenu/drive/mainmenu.html
+++ b/ui/modules/mainmenu/drive/mainmenu.html
@@ -112,9 +112,9 @@
       </div>
     </md-grid-tile>
 
-    <md-grid-tile onclick="location.href = '/ui-dev/drive/index.html'" ng-if="!app.shipping" md-colspan="1" class="other tile" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}">
+    <md-grid-tile ui-sref="menu.menu2view" ng-if="!app.shipping" md-colspan="1" class="other tile" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}">
       <div class="uppercase">
-         UI V2
+         UI V3
       </div>
     </md-grid-tile>
 
