--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -1,12 +1,19 @@
 <link type="text/css" rel="stylesheet" href="modules/multiplayer/multiplayer.css">
 
+<div id="LoadingServer" style="display: none;">
+    <div id="LoadingBody">
+        <h1>Connecting</h1>
+        <span id="LoadingStatus">Loading...</span>
+    </div>
+</div>
+
 <md-content id="back" layout="column">
 
     <md-toolbar class="md-primary" id="top-bar">
         <md-list-item layout="row" class="">
             <h1 class="md-toolbar-tools" style="width:auto;">Multiplayer</h1>
-            <p id="launcher-status" style="text-align:right; margin-right:10px;">Launcher Disconnected</p>
-			<md-button id="launcher-connect-button" class="button" ng-click="multiplayer.resetLauncherConnection()">Connect to launcher</md-button>
+            <!--<p id="launcher-status" style="text-align:right; margin-right:10px;">Launcher Disconnected</p>-->
+			      <!--<md-button id="launcher-connect-button" class="button" ng-click="multiplayer.resetLauncherConnection()">Connect to launcher</md-button>-->
         </md-list-item>
     </md-toolbar>
 
@@ -26,16 +33,18 @@
                 <md-icon class="material-icons">more_horiz</md-icon>
                 Settings
             </md-button>
-			
+
 			<md-divider></md-divider>
 
             <div flex="" style="max-height: none;"></div>
-        </md-content>	
+        </md-content>
 
         <div flex style="position: relative;">
             <md-content ui-view class="container" style="background: transparent; overflow: auto;"></md-content>
         </div>
-			
+
         <div ui-view="edit" layout="column"></div>
     </div>
 </md-content>
+
+<script src="./jquery-3.5.0.min.js"></script>
