Things now work, all you need is 4 shots or rum and a beer

--- a/ui/modules/apps/BeamNG-MP-PlayerList/app.html
+++ b/ui/modules/apps/BeamNG-MP-PlayerList/app.html
@@ -1,7 +1,7 @@
 <div ng-controller="PlayerList" id="PlayerList" class="multiplayerPlayerList" ng-init="init()" ng-style="background-color: rgba(0, 0, 0, 0)">
 	<style>
 	.popout-list {
-		display: block;
+		display: none;
 		margin-right: 80px;
 		//background-color: rgba(0, 0, 0, 0.5)
 	}
