--- a/ui/modules/apps/BeamNG-MP-Session/app.html
+++ b/ui/modules/apps/BeamNG-MP-Session/app.html
@@ -5,7 +5,7 @@
   <div class="col col-right">
     <span>Players: <span id="Session-PlayerCount">0/10</span></span>
     <span>Ping: <span id="Session-Ping">12ms?</span></span>
-    <button type="button" name="button" class="QuitButton">Quit</button>
+    <button type="button" name="button" class="QuitButton" ng-click="mpquit()">Quit</button>
   </div>
   <style>
     div#Session {
