Updated help info on the main screen

--- a/ui/modules/credits/credits.html
+++ b/ui/modules/credits/credits.html
@@ -23,6 +23,18 @@
       </div>
     </div>
 
+    <div>
+      <job>BeamMP Contributors</job>
+      <div>
+        <name>
+		    <span>stefan750</span>
+        </name>
+        <name>
+  		   <span>deerboi</span>
+        </name>
+      </div>
+    </div>
+
     <img src="modules/credits/beamngdrive.png" style="margin-top: 150px;">
 
     <div ng-repeat="contrib in credits.contributors">
