attempt at getting dataTables going, no luck :(

--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -29,10 +29,10 @@
                 Direct Connect
             </md-button>
 
-            <md-button id="settings-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.settings') !== -1)}" ui-sref="menu.multiplayer.settings" style="text-align:left;">
+            <!--<md-button id="settings-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.settings') !== -1)}" ui-sref="menu.multiplayer.settings" style="text-align:left;">
                 <md-icon class="material-icons">more_horiz</md-icon>
                 Settings
-            </md-button>
+            </md-button>-->
 
 			<md-divider></md-divider>
 
@@ -47,4 +47,6 @@
     </div>
 </md-content>
 
-<script src="./jquery-3.5.0.min.js"></script>
+<!-- jQuery -->
+<script src="js/jquery.min.js"></script>
+<script>if (window.module) module = window.module;</script>
